-
Bug
-
Resolution: Done
-
P1: Critical
-
5.3.1
-
None
-
Android
-
-
97384030efd6465de42e786779cf80b309e763e3
On first orientation change, the resizeEvent does not get called when the app is in full screen mode. After this the resizeEvent gets called when orientation changes, but the screen size is equivalent to the events oldSize().
To reproduce:
- open any example that has a QMainWindow
- call showFullScreen() on the mainWindow
- change orientation
- is required for
-
QTBUG-40712 Issues to be fixed before 5.3.2 release
-
- Closed
-
- relates to
-
QTBUG-39977 Full screen mode do not work correctly
-
- Closed
-
- replaces
-
QTBUG-40042 View geometry no longer updated in fullscreen mode
-
- Closed
-